fix: dropdown button wrap

--- a/taier-ui/src/pages/operation/schedule.scss
+++ b/taier-ui/src/pages/operation/schedule.scss
@@ -1,3 +1,8 @@
 .c-taskOperation__wrap {
     height: 100%;
+
+    &__dropdown-btn {
+        display: inline-flex;
+        width: unset;
+    }
 }
